client: fix footer placement on small screen
Reported at https://twitter.com/eigma/status/946233355477110784

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,9 +35,6 @@
   .btn-start {
     width: 90%;
   }
-  .content {
-    height: calc(100vh - 90px);
-  }
 }
 
 @media screen and (max-width: 768px) { /* iPad portrait */
